src/main/java/com/example/final_project/_core/errors/exception/Exception403.java
package com.example.final_project._core.errors.exception;

public class Exception403 extends RuntimeException {
    public Exception403(String msg) {
        super(msg);
    }
}